--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  -webkit-user-select: none;
+  -ms-user-select: none; 
+  user-select: none;
 }
 
 body, html {
